WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
13420
Assert in addToTextEncodingNameMap() should use strcmp()
https://bugs.webkit.org/show_bug.cgi?id=13420
Summary
Assert in addToTextEncodingNameMap() should use strcmp()
Peter Kasting
Reported
2007-04-20 15:22:04 PDT
TextEncodingRegistry.cpp:addToTextEncodingNameMap() has the following code: ASSERT(alias == name || atomicName); ...where alias and name are both char*s. We need to use strcmp() here, because the pointers are not guaranteed to be the same. (Other similar statements elsewhere are safe, because they deal with the returned pointers out of the hash map.) Patch coming shortly.
Attachments
patch v1
(1.23 KB, patch)
2007-04-20 15:36 PDT
,
Peter Kasting
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Kasting
Comment 1
2007-04-20 15:36:04 PDT
Created
attachment 14115
[details]
patch v1 Patch as discussed with olliej on IRC.
Oliver Hunt
Comment 2
2007-04-20 15:46:45 PDT
Landed in
r20975
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug