2007-04-20  Peter Kasting  <pkasting@google.com>

Reviewed by Oliver.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13420

        * platform/TextEncodingRegistry.cpp:
        (WebCore::addToTextEncodingNameMap): Change a pointer comparison to a
        strcmp(), since the strings here are not necessarily
        pointer-equivalent.



Canonical link: https://commits.webkit.org/17511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20975 268f45cc-cd09-0410-ab3c-d52691b4dbfc